# ml-engineer-portfolio

./: .gitignore  README.md  environment.yml  requirements.txt
01_house_price_ml_deployment/: Dockerfile  README.md  requirements.txt
02_customer_churn_prediction/: README.md
02_customer_churn_prediction/models/: LogisticRegression.pkl
02_customer_churn_prediction/notebooks/: churn_eda.ipynb
02_customer_churn_prediction/results/: model_results.csv
02_customer_churn_prediction/src/: predict.py  train.py
03_recommendation_system/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
03_recommendation_system/app/: main.py
03_recommendation_system/data/: interactions.csv  products.csv
04_NLP_sentiment_analysis/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
05_object_detection_yolo/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
05_object_detection_yolo/.github/workflows/: ci.yml
05_object_detection_yolo/app/: main.py
05_object_detection_yolo/app/api/: routes.py
05_object_detection_yolo/app/core/: config.py
05_object_detection_yolo/app/schemas/: response.py
05_object_detection_yolo/app/services/: detector.py
05_object_detection_yolo/scripts/: download_sample_model.sh
05_object_detection_yolo/tests/: test_predict_schema.py
05_object_detection_yolo/yolo_object_detection_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
house-price-ml-deployment/: .gitignore  README.md
(+27 files in other folders)
